fixed 100vh height problem on ios

--- a/frontend/src/components/livegame/player/GameScreen/QuestionScreen/QuestionScreen.css
+++ b/frontend/src/components/livegame/player/GameScreen/QuestionScreen/QuestionScreen.css
@@ -1,6 +1,5 @@
 section {
     font-family: Arial, Helvetica, sans-serif;
-    height: 100vh;
     display: block;
     position: relative;
     background: #fff;
@@ -9,14 +8,14 @@ section {
 }
 
 .top {
-    height: 45vh;
+    height: 45%;
     padding: 30px 30px 0px 30px; 
     overflow-y: auto;
     overflow-x: hidden;
 }
 
 .bottom{
-    height: 55vh;
+    height: 55%;
 }
 
 .flex-center{
